--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack --port 3000",
+    "dev": "bunx steiger ./src && next dev --turbopack --port 3180",
     "build": "next build",
     "start": "next start",
     "lint": "next lint --max-warnings 0",
@@ -16,12 +16,14 @@
     "react-dom": "^19.1.0"
   },
   "devDependencies": {
+    "@feature-sliced/steiger-plugin": "^0.5.5",
     "@repo/eslint-config": "*",
     "@repo/typescript-config": "*",
     "@types/node": "^22.13.10",
     "@types/react": "19.0.12",
     "@types/react-dom": "19.0.4",
     "eslint": "^9.23.0",
+    "steiger": "^0.5.6",
     "typescript": "5.8.2"
   }
 }
